--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -155,7 +155,7 @@
     <Compile Include="Scripts\Storage\AllowedSourcesSnapshot.cs" />
     <Compile Include="Scripts\Storage\ItemStackCacheManager.cs" />
     <Compile Include="Scripts\Data\ItemNames.cs" />
-    <Compile Include="Scripts\Storage\LootableItemHandler.cs" />
+    <Compile Include="Scripts\TileEntities\LootableItemHandler.cs" />
     <Compile Include="Scripts\Storage\StorageContext.cs" />
     <Compile Include="Scripts\Game\Block\BlockRepair.cs" />
     <Compile Include="Scripts\Game\Block\BlockUpgrade.cs" />
