Update config scheme to turn off isDebug for servers on first launch of v2.4.0

--- a/BeyondStorage/config.json
+++ b/BeyondStorage/config.json
@@ -7,6 +7,6 @@
     "pullFromPlayerCraftedNonCrates": true,
     "pullFromVehicleStorage": true,
     "serverSyncConfig": true,
-    "isDebug": true,
+    "isDebug": false,
     "isDebugLogSettingsAccess": false
 }
