Add script to check for overuse of logging

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ Troubleshooting/
 
 # Code quality check files left from the code quality check Python scripts
 code_check_results*.txt
+log_check_results_*.txt
 
 # Microsoft.CodeAnalysis related files
 Humanizer.*
