Improve debug log verbosity check script

--- a/BeyondStorage/utils/log_check_skip_list.cfg
+++ b/BeyondStorage/utils/log_check_skip_list.cfg
@@ -18,4 +18,5 @@
 Configuration\ModConfig.cs
 Harmony\ILCodeMatcher.cs
 Harmony\ILPatchEngine.cs
+Infrastructure\ConfigVersioning.cs
 Infrastructure\ModLogger.cs
