--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -74,8 +74,10 @@
   </Target>
   <ItemGroup>
     <Compile Include="Source\HarmonyCommands\BsCommandRegistry.cs" />
+    <Compile Include="Source\HarmonyCommands\BsConfigPropertyRegistry.cs" />
     <Compile Include="Source\HarmonyCommands\ConsoleCmdBsHelp.cs" />
     <Compile Include="Source\HarmonyCommands\ConsoleCmdBsClearCache.cs" />
+    <Compile Include="Source\HarmonyCommands\ConsoleCmdBsSetConfig.cs" />
     <Compile Include="Source\HarmonyCommands\ConsoleCmdBsShowConfig.cs" />
     <Compile Include="Source\HarmonyPatches\BeyondStorage_Init.cs" />
     <Compile Include="Source\HarmonyPatches\Block\Repair\ItemActionRepair_Repair_Patches.cs" />
