--- a/BeyondStorage/BeyondStorage2.csproj
+++ b/BeyondStorage/BeyondStorage2.csproj
@@ -54,6 +54,7 @@
   </Target>
   <ItemGroup>
     <Compile Include="Source\Game\UI\SmartSortingCommon.cs" />
+    <Compile Include="Source\Game\UI\UIControlHelpers.cs" />
     <Compile Include="Source\Game\UI\WindowStateManager.cs" />
     <Compile Include="Source\HarmonyCommands\BsCommandRegistry.cs" />
     <Compile Include="Source\HarmonyCommands\BsConfigPropertyRegistry.cs" />
@@ -108,6 +109,7 @@
     <Compile Include="Source\HarmonyPatches\Server\GameManager_Patches.cs" />
     <Compile Include="Source\HarmonyPatches\Informatics\XUiC_LootWindow_Patches.cs" />
     <Compile Include="Source\HarmonyPatches\UI\XUiCBackpackWindowPatches.cs" />
+    <Compile Include="Source\HarmonyPatches\UI\XUiControllerPatches.cs" />
     <Compile Include="Source\HarmonyPatches\Vehicle\Refuel\EntityVehicle_Patches.cs" />
     <Compile Include="Source\HarmonyPatches\Vehicle\Repair\XUiM_Vehicle_Patches.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
