--- a/BeyondStorage/ModPackage/config.json
+++ b/BeyondStorage/ModPackage/config.json
@@ -1,11 +1,12 @@
 {
-    "version": "2.4.0",
-    "range": -1.0,
-    "pullFromDrones": true,
-    "pullFromDewCollectors": true,
-    "pullFromWorkstationOutputs": true,
-    "pullFromPlayerCraftedNonCrates": true,
-    "pullFromVehicleStorage": true,
-    "serverSyncConfig": true,
-    "isDebug": false
+  "version": "2.4.0",
+  "range": -1.0,
+  "pullFromDrones": true,
+  "pullFromDewCollectors": true,
+  "pullFromWorkstationOutputs": true,
+  "pullFromPlayerCraftedNonCrates": false,
+  "pullFromVehicleStorage": true,
+  "serverSyncConfig": true,
+  "isDebug": true,
+  "isDebugLogSettingsAccess": false
 }
